# Free-Parallel-AEO

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  pyproject.toml  requirements.txt  run.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: default.toml  logging.yaml
examples/: acme.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/components/: Dashboard.tsx  StatusPill.test.tsx  StatusPill.tsx
frontend/src/pages/: NewRun.tsx  RunView.tsx  Runs.tsx  Trends.tsx
migrations/: env.py
migrations/versions/: 84e530b3813b_initial_schema.py
scripts/: bootstrap.py
src/aeo/: __init__.py  __main__.py  app.py  cli.py  constants.py  exceptions.py  logging.py  settings.py  storage.py  utils.py
src/aeo/analysis/: __init__.py  citations.py  mentions.py  metrics.py  models.py  queries.py  segmenter.py  selfreport.py
src/aeo/api/: deps.py  executor.py  router.py
src/aeo/api/routes/: documents.py  health.py  models.py  runs.py  settings.py  trends.py
src/aeo/core/: __init__.py  orchestrator.py  pipeline.py  prompting.py  runner.py  synthesizer.py
src/aeo/core/prompts/: answer.jinja  orchestrator.jinja
src/aeo/db/: __init__.py  base.py  models.py  session.py
src/aeo/providers/: __init__.py  base.py  openrouter.py  stub.py
src/aeo/reports/: __init__.py  base.py  csv_report.py  json_report.py  pdf_report.py  responses_report.py  theme.py  xlsx_report.py
src/aeo/schemas/: __init__.py  api.py  company.py  question.py  run.py
src/aeo/services/: __init__.py  company_service.py  document_service.py  report_service.py  run_service.py  trend_service.py
tests/: conftest.py
tests/integration/: test_stub_pipeline.py
tests/unit/: test_analysis.py  test_documents.py  test_orchestrator.py  test_prompt_and_selfreport.py  test_synthesizer.py  test_url_attribution.py
