[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "free-parallel-aeo"
version = "0.1.0"
description = "Free-Parallel-AEO — an open-source, self-hostable AI brand-visibility scanner."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nemanja Vujic" }]
keywords = ["aeo", "llm", "openrouter", "brand-visibility", "seo", "gpt", "claude"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "tenacity>=8.2",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "alembic>=1.13",
  "structlog>=24.1",
  "typer>=0.12",
  "jinja2>=3.1",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "sse-starlette>=2.1",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "hypothesis>=6.100",
  "pre-commit>=3.7",
  "types-PyYAML",
]

[project.scripts]
aeo = "aeo.cli:app"

[project.urls]
Homepage = "https://github.com/nvujic2002/Free-Parallel-AEO"
Repository = "https://github.com/nvujic2002/Free-Parallel-AEO"

[tool.hatch.build.targets.wheel]
packages = ["src/aeo"]

[tool.hatch.build.targets.wheel.force-include]
"src/aeo/web/dist" = "aeo/web/dist"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["B008"]  # FastAPI/Typer use function calls in argument defaults

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["aeo"]
mypy_path = "src"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pandas.*", "openpyxl.*", "sse_starlette.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["aeo"]
omit = ["*/migrations/*", "*/__main__.py"]

[tool.coverage.report]
show_missing = true
