[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parallel-aeo"
version = "0.1.0"
description = "Parallel-AEO — an open-source, self-hostable AI brand-visibility scanner."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nemanja Vujic" }]
keywords = ["aeo", "llm", "openrouter", "brand-visibility", "seo", "gpt", "claude"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "tenacity>=8.2",
  "structlog>=24.1",
  "typer>=0.12",
  "jinja2>=3.1",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "sse-starlette>=2.1",
  "python-multipart>=0.0.9",
  "python-docx>=1.1",
  "pypdf>=4.2",
  "matplotlib>=3.8",
  "reportlab>=4.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "hypothesis>=6.100",
  "pre-commit>=3.7",
  "types-PyYAML",
]

[project.scripts]
aeo = "aeo.cli:app"

[project.urls]
Homepage = "https://github.com/Vujavujavuja/Parallel-AEO"
Repository = "https://github.com/Vujavujavuja/Parallel-AEO"

[tool.hatch.build.targets.wheel]
packages = ["src/aeo"]

[tool.hatch.build.targets.wheel.force-include]
"src/aeo/web/dist" = "aeo/web/dist"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["B008"]  # FastAPI/Typer use function calls in argument defaults

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]

[tool.mypy]
# 3.12 so mypy can parse newer dependency stubs (e.g. numpy). Runtime support is
# still 3.11+ — ruff's py311 target keeps our own code 3.11-compatible.
python_version = "3.12"
strict = true
packages = ["aeo"]
mypy_path = "src"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "pandas.*", "openpyxl.*", "sse_starlette.*", "docx.*", "pypdf.*",
  "matplotlib.*", "reportlab.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["aeo"]
omit = ["*/__main__.py"]

[tool.coverage.report]
show_missing = true
